src/main/java/org/example/hanmo/error/exception/BusinessException.java
package org.example.hanmo.error.exception;

import lombok.Getter;
import org.example.hanmo.error.ErrorCode;

@Getter
public class BusinessException extends RuntimeException{
    private final ErrorCode errorCode;

    public BusinessException(String message, ErrorCode errorCode) {
        super(message);
        this.errorCode = errorCode;
    }
}